overflow body fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,7 @@ body {
   background: #ecbf8c;
   min-height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 
 ::selection {
